src/styles/globals.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;700&display=swap');

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

::-moz-selection { /* Code for Firefox */
  background: #b0ff00;
}

::selection {
  background: #b0ff00;
}

html,
body {
  font-family: "Inter", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
}

#__next {
  position: relative;
  width: 100%;
  height: 100%;
}

body {
  padding: 0 8vw;
  height: 100vh;
  width: 100vw;
  background: linear-gradient(0deg, #F6F6F6 0%, #f0eaff 80%);
  background-attachment: fixed;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

@media screen and (max-width: 1440px) {
  :root {
    font-size: 14px;
  }
}


@media screen and (max-width: 1024px) {
  :root {
    font-size: 12px;
  }
}

